rust/schema/tests/snapshots/merge__theorem-add-text.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Claim
      claimType: Theorem
      content:
        - type: Paragraph
          content:
            - type: Text
              value: Relatively interesting.
        - type: MathBlock
          code: e = m*c^2
          mathLanguage: latex
new:
  type: Article
  content:
    - type: Claim
      claimType: Theorem
      content:
        - type: Paragraph
          content:
            - type: Text
              value: Relatively interesting.
        - type: MathBlock
          code: e = m*c^2
          mathLanguage: latex
        - type: Paragraph
          content:
            - type: Text
              value: May be true.
ops:
  - - - content
      - 0
      - content
    - Push:
        type: Paragraph
        content:
          - type: Text
            value: May be true.
