rust/schema/tests/snapshots/merge__wrap-emphasis.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: grass rabbit
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: "grass "
        - type: Emphasis
          content:
            - type: Text
              value: rabbit
ops:
  - - - content
      - 0
      - content
    - Push:
        type: Emphasis
        content:
          - type: Text
            value: rabbit
  - - - content
      - 0
      - content
      - 0
      - value
    - Set: "grass "
